# adv-mechanic

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
servers/: rag_server.py  web_server.py
src/adv_mechanic/: config.py  graph.py  main.py  search.py  state.py
src/adv_mechanic/ingestion/: chunker.py  pdf_parser.py  pipeline.py
src/adv_mechanic/nodes/: conflict.py  generate.py  grade.py  retrieve.py  router.py  web_search.py
src/bike_mechanic/: graph.py  main.py  search.py  state.py
src/bike_mechanic/ingestion/: chunker.py  pipeline.py
src/bike_mechanic/nodes/: conflict.py  enrich_specs.py  generate.py  grade.py  retrieve.py  router.py  web_search.py
