[project]
name = "adv-mechanic"
version = "0.1.0"
description = "Agentic RAG for adventure motorcycle service manuals"
readme = "README.md"
authors = [
    { name = "Dmitry Ryzhkov", email = "dimaryz@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.4",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "mcp[cli]>=1.0",
    "lancedb>=0.20",
    "pdfplumber>=0.11",
    "sentence-transformers>=4.0",
    "tavily-python>=0.5",
    "pydantic>=2.0",
    "typer>=0.15",
    "python-dotenv>=1.0",
    "tantivy>=0.22",
]

[project.scripts]
adv-mechanic = "adv_mechanic.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adv_mechanic"]
